2005-10-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/AlienMap2.c: renamed to "Alien Map".

2005-10-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/hot.c: also moved into Colors/Modify.

	* menus/image-menu.xml.in: moved Info submenu to the bottom.

2005-10-28  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: applied a patch by Tobias Lenz that makes use
	of the state that was added to SIOX in order to speed up the tool.

2005-10-28  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppageselector.[ch]: added new signal "activate"
	and emit it if the user activates an item in the icon view.

	* plug-ins/common/poppler.c
	* plug-ins/common/postscript.c: activate the dialog if the page
	selector emits "activate" as suggested in bug #320080.

2005-10-28  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in: handle gimpprint just like other libraries. It
	doesn't make sense any longer to require it.

	* app/paint/gimpink-blob.c: commented out unused code.

2005-10-27  Manish Singh  <yosh@gimp.org>

	* app/paint-funcs/paint-funcs.h: declare component_pixels,
	combine_mask_and_alpha_channel_{stipple,stroke}. Fixes bug #319811.

2005-10-27  Michael Natterer  <mitch@gimp.org>

	* configure.in: check for gnome-keyring.

	* plug-ins/uri/uri-backend.h
	* plug-ins/uri/uri-backend-wget.c
	* plug-ins/uri/uri-backend-gnomevfs.c: added "plugin_name",
	boolean "run" and "run_mode" parameters to uri_backend_init().

	* plug-ins/uri/uri-backend-gnomevfs.c (uri_backend_init):
	initialize the gnome authentication manager only when called
	interactively from "run". Also call gimp_ui_init() when using the
	auth manager, since recent versions seem to require an already
	initialized GTK+. When running noninteractively and gnome-keyring
	is available, implement the needed GnomeVFS authentication
	callbacks ourselves and ask gnome-keyring directly.

	* plug-ins/uri/uri.c: pass the additional parameters to
	uri_backend_init().

2005-10-26  Carol Spears  <carol@gimp.org>
