@@ -1,3 +1,11 @@
+2005-10-28  Carol Spears  <carol@gimp.org>
+
+	* app/actions/image-actions.c: Changed colors-modify-menu to 
+        colors-transform-menu
+
+	* menus/image-menu.xml.in: moved Desaturate and Invert into the tools
+        section of the colors-menu.
+
 2005-10-28  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/AlienMap2.c: renamed to "Alien Map".
